[gd_scene load_steps=2 format=3 uid="uid://upgrade_ui_001"]

[ext_resource type="Script" path="res://scenes/ui/upgrade_selection_ui.gd" id="1"]

[node name="UpgradeSelectionUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 780.0
offset_bottom = 80.0
text = "选择升级"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 750.0
offset_bottom = 550.0

[node name="Option1" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)
text = "选项 1"

[node name="Option2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)
text = "选项 2"

[node name="Option3" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)
text = "选项 3"
